# caen-dig2

./: CHANGELOG  INSTALL  Makefile.am  Makefile.in  README_LINUX.txt  aclocal.m4  configure  configure.ac
backend-server/include/: server_definitions.hpp
backend-server/include/json/: json_answer.hpp  json_cmd.hpp  json_common.hpp  json_element.hpp  json_element_fwd.hpp  json_node_type.hpp  json_utilities.hpp
demo/caen-felib-demo-dpp-pha/: Makefile  caen-felib-demo-dpp-pha.vcxproj  main.c
demo/caen-felib-demo-dpp-psd/: Makefile  caen-felib-demo-dpp-psd.vcxproj  main.c
demo/caen-felib-demo-dpp-zle/: Makefile  caen-felib-demo-dpp-zle.vcxproj  main.c
demo/caen-felib-demo-open-dpp/: Makefile  caen-felib-demo-open-dpp.vcxproj  main.c
demo/caen-felib-demo-python/: demo_scope.py
demo/caen-felib-demo-scope/: Makefile  caen-felib-demo-scope.vcxproj  caen-felib-demo-scope.vcxproj.filters  main.c
demo/caen-felib-demo-sync/: Makefile  caen-felib-demo-sync.vcxproj  caen-felib-demo-sync.vcxproj.filters  main.c  tlock_queue.c  tlock_queue.h
include/: CAENDig2.h  api.hpp  client.hpp  data_format_utils.hpp  discovery.hpp  global.hpp  handle.hpp  last_error.hpp  lib_definitions.hpp  lib_error.hpp  library_logger.hpp
include/cpp-utility/: args.hpp  bit.hpp  byte.hpp  circular_buffer.hpp  counting_range.hpp  cpu.hpp  dependent_false.hpp  dll.hpp  hash.hpp  iequals.hpp  integer.hpp  is_in.hpp  lexical_cast.hpp  math.hpp  optional.hpp  scope_exit.hpp  scoped_set.hpp  serdes.hpp  socket_option.hpp  span.hpp  string.hpp  string_to_pointer.hpp  string_view.hpp  ticket_mutex.hpp  to_address.hpp  to_underlying.hpp  type_traits.hpp  value_with_digits.hpp  variant.hpp  vector.hpp  win32_process_terminate.hpp
include/endpoints/: aggregate_endpoint.hpp  dpp_probe_types.hpp  dpppha.hpp  dpppsd.hpp  dppzle.hpp  endpoint.hpp  events.hpp  hw_endpoint.hpp  opendpp.hpp  raw.hpp  rawudp.hpp  scope.hpp  sw_endpoint.hpp
include/json/: json_data_format.hpp
src/: CAENDig2.cpp  Makefile.am  Makefile.in  api.cpp  client.cpp  discovery.cpp  last_error.cpp  library_logger.cpp
src/endpoints/: aggregate_endpoint.cpp  dpppha.cpp  dpppsd.cpp  dppzle.cpp  endpoint.cpp  events.cpp  hw_endpoint.cpp  opendpp.cpp  raw.cpp  rawudp.cpp  scope.cpp  sw_endpoint.cpp
